home page updates

--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -286,12 +286,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #f67e4e;
+  color: #fa6022;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #ec4c0c;
+  color: #cb3e05;
   text-decoration: underline;
 }
 a:focus {
@@ -528,10 +528,10 @@ mark,
   color: #777777;
 }
 .text-primary {
-  color: #f67e4e;
+  color: #fa6022;
 }
 a.text-primary:hover {
-  color: #f45b1d;
+  color: #e44505;
 }
 .text-success {
   color: #3c763d;
@@ -559,10 +559,10 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
-  background-color: #f67e4e;
+  background-color: #fa6022;
 }
 a.bg-primary:hover {
-  background-color: #f45b1d;
+  background-color: #e44505;
 }
 .bg-success {
   background-color: #dff0d8;
@@ -1475,8 +1475,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #f67e4e;
-  border-color: #f56c36;
+  background-color: #fa6022;
+  border-color: #f94e09;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -1485,8 +1485,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #f45b1d;
-  border-color: #e2490b;
+  background-color: #e44505;
+  border-color: #c13a04;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -1511,11 +1511,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #f67e4e;
-  border-color: #f56c36;
+  background-color: #fa6022;
+  border-color: #f94e09;
 }
 .btn-primary .badge {
-  color: #f67e4e;
+  color: #fa6022;
   background-color: #ffffff;
 }
 .btn-success {
@@ -1699,7 +1699,7 @@ fieldset[disabled] .btn-danger.active {
   background-color: #ffffff;
 }
 .btn-link {
-  color: #f67e4e;
+  color: #fa6022;
   font-weight: normal;
   border-radius: 0;
 }
@@ -1720,7 +1720,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #ec4c0c;
+  color: #cb3e05;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -1794,11 +1794,11 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #f67e4e;
+  background-color: #fa6022;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #f45b1d;
+  background-color: #e44505;
 }
 .label-success {
   background-color: #75b72a;
@@ -2633,7 +2633,7 @@ img {
 h2 {
   padding: 30px 10px 0;
   border-radius: 7px;
-  color: #f67e4e;
+  color: #fa6022;
 }
 h4 {
   font-weight: bolder;
@@ -2724,7 +2724,7 @@ h5 {
 }
 .contact-background .container .contact-background-punchline {
   position: relative;
-  color: #f67e4e;
+  color: #fa6022;
   font-weight: 700;
   margin: 0;
   font-size: 50px;
@@ -2733,7 +2733,7 @@ h5 {
 }
 .page-header {
   position: relative;
-  color: #f67e4e;
+  color: #fa6022;
   font-weight: 700;
   margin: 0;
   font-size: 16px;
@@ -2772,7 +2772,7 @@ h5 {
   padding-bottom: 5px;
   background: #000;
   font-size: 10px;
-  color: #f67e4e;
+  color: #fa6022;
 }
 .footer a {
   color: #ffffff;
@@ -2831,7 +2831,8 @@ h5 {
 }
 .flex-4-column {
   padding: 0;
-  margin: 0;
+  margin-left: 40px;
+  margin-right: 40px;
   list-style: none;
   flex-flow: row nowrap;
   display: -webkit-box;
@@ -2840,14 +2841,15 @@ h5 {
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .flex-4-column p {
   margin: 0;
 }
 .flex-2-column {
   padding: 0;
-  margin: 0;
+  margin-left: 40px;
+  margin-right: 40px;
   list-style: none;
   flex-flow: row nowrap;
   display: -webkit-box;
@@ -2856,7 +2858,7 @@ h5 {
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .flex-2-column p {
   visibility: hidden;
@@ -2865,7 +2867,7 @@ h5 {
 .column-item {
   display: flex;
   padding: 20px 10px 20px;
-  width: 250px;
+  width: 350px;
   line-height: 12px;
   color: #000;
   font-weight: 100;
@@ -2875,7 +2877,7 @@ h5 {
 .column-item-dark {
   display: flex;
   padding: 20px 10px 20px;
-  width: 250px;
+  width: 350px;
   line-height: 12px;
   color: #ffffff;
   font-weight: 100;
@@ -2884,7 +2886,8 @@ h5 {
 }
 .flex-page-header {
   padding: 0;
-  margin: 0;
+  margin-left: 40px;
+  margin-right: 40px;
   list-style: none;
   flex-flow: row nowrap;
   display: -webkit-box;
@@ -2898,12 +2901,12 @@ h5 {
   margin: 0;
 }
 .flex-page-header .column-page-header {
-  display: flex;
-  width: 450px;
-  line-height: 12px;
-  font-weight: 100;
-  font-size: 12px;
-  text-align: left;
+  position: relative;
+  color: #fa6022;
+  font-weight: 700;
+  margin: 0;
+  font-size: 46px;
+  letter-spacing: 0px;
 }
 .list-staff-name {
   margin: 0 0 5px;
