--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -75,21 +75,43 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 		</li>
 		<li class="column-item">
 			<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum. Morbi condimentum sem at eros volutpat, nec mollis eros laoreet. Aliquam aliquam nulla vel consequat egestas.
 
-Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. Morbi mattis metus ut tempor interdum. Nunc diam mi, sodales imperdiet pellentesque ut, pretium vel justo. Aenean imperdiet lectus quam, in venenatis urna scelerisque vel. Suspendisse ac massa at quam sagittis facilisis sit amet id turpis. Aenean luctus nisl sit amet lectus tempus gravida id ac tellus. Mauris dapibus magna enim, eget elementum arcu eleifend id. Proin ac nunc non dui hendrerit semper. Nam pharetra tortor vitae orci ullamcorper eleifend. Proin porttitor lectus quis urna tempor, et eleifend lacus ornare. Mauris non vulputate est.
 			</p>
 		</li>
 		<li class="column-item">
 			<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum. Morbi condimentum sem at eros volutpat, nec mollis eros laoreet. Aliquam aliquam nulla vel consequat egestas.
 
-Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. Morbi mattis metus ut tempor interdum. Nunc diam mi, sodales imperdiet pellentesque ut, pretium vel justo. Aenean imperdiet lectus quam, in venenatis urna scelerisque vel. Suspendisse ac massa at quam sagittis facilisis sit amet id turpis. Aenean luctus nisl sit amet lectus tempus gravida id ac tellus. Mauris dapibus magna enim, eget elementum arcu eleifend id. Proin ac nunc non dui hendrerit semper. Nam pharetra tortor vitae orci ullamcorper eleifend. Proin porttitor lectus quis urna tempor, et eleifend lacus ornare. Mauris non vulputate est.
 			</p>
 		</li>
 
 	</ul>
+
 <div class="page-seperator"></div>
+<ul class="flex-4-column">
+	<li class="column-item">
+		<p><b>logo logo logo logo</b></p><br>
+
+
+	</li>
+	<li class="column-item">
+		<p><b>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio.
+		<br><br><br><br><br>
+	</p></b>
+
+	</li>
+	<li class="column-item">
+		<p>
+
+		</p>
+	</li>
+	<li class="column-item">
+		<p>
+
+		</p>
+	</li>
+
+</ul>
 
 <div class="contact-background">
 	<ul class="flex-page-header">
