added images to about page

--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2874,6 +2874,16 @@ h5 {
   font-size: 12px;
   text-align: left;
 }
+.column-image {
+  display: flex;
+  padding: 20px 10px 20px;
+  width: 350px;
+  line-height: 12px;
+  color: #000;
+  font-weight: 100;
+  font-size: 12px;
+  text-align: left;
+}
 .column-item-dark {
   display: flex;
   padding: 20px 10px 20px;
