--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -438,6 +438,18 @@ h5 {
 
 }
 
+.column-image {
+  display: flex;
+  padding:20px 10px 20px;
+  width: 350px;
+  line-height: 12px;
+  color: #000;
+  font-weight: 100;
+  font-size: 12px;
+  text-align: left;
+
+}
+
 .column-item-dark {
   display: flex;
   padding:20px 10px 20px;
