--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2791,7 +2791,8 @@ h5 {
 .page-seperator {
   border-bottom: 1px solid;
   color: #000;
-  padding: 10px 10px;
+  padding: 10px 30px;
+  margin-top: 20px;
 }
 .contact-details {
   color: #808285;
@@ -2913,7 +2914,8 @@ h5 {
   position: relative;
   color: #fa6022;
   font-weight: 700;
-  margin: 0;
+  margin-top: 40px;
+  margin-bottom: 20px;
   font-size: 46px;
   letter-spacing: 0px;
 }
