--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -321,7 +321,8 @@ h5 {
 .page-seperator {
   border-bottom: 1px solid;
   color: #000;
-  padding: 10px 10px;
+  padding: 10px 30px;
+  margin-top: 20px;
 }
 
 
@@ -420,7 +421,7 @@ h5 {
 
 
   p {
-    
+
     margin:0;
   }
 
@@ -488,7 +489,8 @@ h5 {
   position:relative;
   color: @color-orange;
   font-weight: 700;
-  margin:0;
+  margin-top: 40px;
+  margin-bottom: 20px;
   font-size:46px;
   letter-spacing: 0px;
 
