--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -55,6 +55,7 @@ img {
 .header {
 
   .nav {
+
     margin-left: auto;
     margin-right: auto;
 
@@ -69,16 +70,18 @@ img {
 }
 
 .nav-main {
-  margin:0;
+  margin: 0;
+
   list-style:none;
 
   > li {
+
     float:left;
 
     > a {
       display:block;
       padding:10px 15px 15px;
-      color:#fff;
+      color:#000;
 
 
       &:hover {
@@ -99,9 +102,9 @@ img {
 
     &.nav-active {
       > a {
-        color:@white;
-        font-weight:bold;
-        background:#9D9D9C;
+        color:@color-orange;
+        font-weight:700;
+
 
 
       }
