--- a/_themes/24hl/layouts/default.html
+++ b/_themes/24hl/layouts/default.html
@@ -25,6 +25,8 @@
   </head>
   <body id="top" class="page-{{segment_1}}">
 
+    <header class="header">
+      <div class="container">
 
 
 
@@ -40,7 +42,8 @@
           </ul>
 
         </nav>
-
+      </div>
+    </header>
 
 
     {{ layout_content }}
