work page formatting

--- a/_themes/24hl/templates/work.html
+++ b/_themes/24hl/templates/work.html
@@ -16,55 +16,59 @@
 			</ul>
 
 <!-- content bit -->
-<ul class="flex-4-column">
+<ul class="flex-wrap">
 	<li class="column-page-header">
 		<p>
 		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		This is some text
+		<br>This is some text
 		</p>
 	</li>
 	<li class="column-page-header">
 		<p>
 		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		This is some text
-		</p>
-	</li><li class="column-page-header">
-		<p>
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		This is some text
-		</p>
-	</li><li class="column-page-header">
-		<p>
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		This is some text
+		<br>This is some text
 		</p>
 	</li>
+		<li class="column-page-header">
+		<p>
+		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+		<br>This is some text
+		</p>
+	</li>
+		<li class="column-page-header">
+		<p>
+		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+		<br>This is some text
+		</p>
+	</li>
+		<li class="column-page-header">
+		<p>
+		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+		<br>This is some text
+		</p>
+	</li>
+		<li class="column-page-header">
+		<p>
+		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+		<br>This is some text
+		</p>
+	</li>
+	<li class="column-page-header">
+		<p>
+			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+			<br>This is some text
+			</p>
+	</li>
+		<li class="column-page-header">
+			<p>
+				<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
+				<br>This is some text
+			</p>
+	</li>
+
 </ul>
 
-<ul class="flex-4-column">
-	<li class="column-page-header">
-		<p>
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		This is some text
-		</p>
-	</li>
-	<li class="column-page-header">
-		<p>
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		This is some text
-		</p>
-	</li><li class="column-page-header">
-		<p>
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		This is some text
-		</p>
-	</li><li class="column-page-header">
-		<p>
-		<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-		This is some text
-		</p>
-	</li>
-</ul>
+
           <div class="list-files">
             {{ files }}
               <a class="list-file" href="{{ filePath }}">
