--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2846,6 +2846,23 @@ h5 {
 .flex-4-column p {
   margin: 0;
 }
+.flex-wrap {
+  padding: 0;
+  margin-left: 40px;
+  margin-right: 40px;
+  list-style: none;
+  flex-flow: row wrap;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  justify-content: flex-start;
+}
+.flex-wrap p {
+  margin: 0;
+}
 .flex-2-column {
   padding: 0;
   margin-left: 40px;
