--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -406,6 +406,30 @@ h5 {
 
 }
 
+.flex-wrap {
+  padding: 0;
+  margin-left: 40px;
+  margin-right: 40px;
+  list-style: none;
+  display: flex;
+  flex-flow: row wrap;
+
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+
+  -webkit-flex-direction: row;
+  justify-content: flex-start;
+
+
+  p {
+    margin:0;
+  }
+
+}
+
 .flex-2-column {
   padding: 0;
   margin-left: 40px;
