--- a/_themes/24hl/templates/workfullpage.html
+++ b/_themes/24hl/templates/workfullpage.html
@@ -18,16 +18,15 @@
 <!-- content bit -->
 <ul class="flex-4-column">
 	<li class="column-page-header">
-	<h2 class="column-image"></h2>
-		<p>
-		</p>
+	<h2 class="column-item"></h2>
+
 	</li>
 	<li class="column-page-header">
-		<h2 class="column-image"></h2>
-		<p>
+		<h2 class="column-item"></h2>
+
 		<img src="/assets/img/domoto_large.jpg" alt="domoto logo" height="800" width="1200">
 
-		</p>
+		
 	</li>
 
 
