added particles to journal

--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -1,5 +1,15 @@
-<div class="contact-background">
-<div class="row">
+
+
+
+
+
+  <!-- particles.js container -->
+  <div id="particles-js">
+
+  <!-- scripts -->
+  <script src="/_themes/24hl/js/particles.js"></script>
+  <script src="/_themes/24hl/js/app.js"></script>
+  <div class="row">
   <div class="col-md-3">
   	<div class="column-page-header">
   		<h2 class="page-header">24HOUR JOURNAL</h2>
@@ -20,4 +30,5 @@
 </div>
   </div>
 </div>
+
 </div>
