fixed particles and journal page

--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2621,7 +2621,6 @@ img {
   }
   .nav-main > li > a {
     background: #eeeeee;
-    border-radius: 0;
     padding: 5px 20px;
   }
 }
@@ -2631,7 +2630,6 @@ img {
 }
 h2 {
   padding: 30px 10px 0;
-  border-radius: 7px;
   color: #fa6022;
 }
 h4 {
@@ -2900,8 +2898,15 @@ h5 {
   font-size: 12px;
   text-align: left;
 }
+.journal-layout {
+  padding: 60px 10px 10px 10px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
 .journal-container {
   background-color: #000;
+  padding: 10px 10px 10px 10px;
 }
 .column-item-dark {
   display: flex;
@@ -2938,32 +2943,6 @@ h5 {
   font-size: 46px;
   letter-spacing: 0px;
 }
-.home-page-header {
-  margin: 0;
-  display: block;
-  background: #019fe3;
-  padding: 20px 10px 5px;
-  color: #ffffff;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-/* ---- stats.js ---- */
-.js-count-particles {
-  font-size: 1.1em;
-}
-#stats,
-.count-particles {
-  -webkit-user-select: none;
-  margin-top: 5px;
-  margin-left: 5px;
-}
-#stats {
-  border-radius: 3px 3px 0 0;
-  overflow: hidden;
-}
-.count-particles {
-  border-radius: 0 0 3px 3px;
-}
 /* ---- particles.js container ---- */
 #particles-js {
   width: 100%;
@@ -2971,6 +2950,5 @@ h5 {
   background-color: #0f0203;
   background-image: url('');
   background-size: cover;
-  background-position: 50% 50%;
   background-repeat: no-repeat;
 }
