--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -1,34 +1,28 @@
+<!-- particles.js container -->
 
-
-
-
-
-  <!-- particles.js container -->
-  <div id="particles-js">
+<div id="particles-js">
 
   <!-- scripts -->
   <script src="/_themes/24hl/js/particles.js"></script>
   <script src="/_themes/24hl/js/app.js"></script>
-  <div class="row">
-  <div class="col-md-3">
-  	<div class="column-page-header">
-  		<h2 class="page-header">24HOUR JOURNAL</h2>
-  	</div>
+
+  <div class="journal-layout">
+    <h2 class="page-header">24HOUR JOURNAL</h2>
   </div>
-<div class="row">
-  <div class="col-md-offset-3 col-md-6">
-    <div class="journal-container">
 
-    <h3>{{ title }}</h3>
-    {{ content }}
+  <div class="journal-layout">
+    <div class="col-md-offset-3 col-md-6">
+      <div class="journal-container">
 
-    {{ entries:listing folder="blog" limit="5" }}
-    <h3><a href="{{ url }}">{{ title }}</a></h3>
-    <h4>{{ date }}</h4>
-    {{ content }}
-    {{ /entries:listing }}
-</div>
+        <h3>{{ title }}</h3>
+        {{ content }}
+
+        {{ entries:listing folder="blog" limit="5" }}
+        <h3><a href="{{ url }}">{{ title }}</a></h3>
+        <h4>{{ date }}</h4>
+        {{ content }}
+        {{ /entries:listing }}
+      </div>
+    </div>
   </div>
-</div>
-
 </div>
