--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2945,10 +2945,12 @@ h5 {
 }
 /* ---- particles.js container ---- */
 #particles-js {
+  position: absolute;
   width: 100%;
   height: 100%;
   background-color: #0f0203;
   background-image: url('');
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: 50% 50%;
 }
