--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -319,9 +319,6 @@ h5 {
   }
 }
 
-
-
-
 .page-seperator {
   border-bottom: 1px solid;
   color: #000;
@@ -548,11 +545,13 @@ h5 {
 /* ---- particles.js container ---- */
 
 #particles-js{
+  position: absolute;
   width: 100%;
   height: 100%;
   background-color: #0f0203;
   background-image: url('');
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: 50% 50%;
 
 }
