--- a/_themes/24hl/layouts/journal.html
+++ b/_themes/24hl/layouts/journal.html
@@ -24,33 +24,10 @@
     <link href='http://fonts.googleapis.com/css?family=Oxygen:300,400,700' rel='stylesheet' type='text/css'>
   </head>
   <body id="top" class="page-{{segment_1}}">
-    <header class="header">
-      <div class="container">
-        <h1 class="block-logo">
 
-          <a href="{{ homepage }}">
-            <span class="top"></span>
-            <span class="bottom"></span>
-            <span class="description">
-              {{ _site_name|widont }}
-            </span>
-          </a>
-        </h1>
 
-        <nav class="block-navigation">
-          <ul class="nav nav-main" role="navigation">
-            {{ nav from="/" }}
-              <li {{ if is_current || is_parent }} class="nav-active"{{ endif }}>
-                <a href="{{ url }}">
-                  {{ title }}
-                </a>
-              </li>
-            {{ /nav }}
-          </ul>
 
-        </nav>
-      </div>
-    </header>
+
 
 
     {{ layout_content }}
@@ -60,9 +37,22 @@
     <footer class="footer" role="contentinfo">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-2">
-
+          <div class="col-xs-12 col-sm-3">
+            e: <a href="mailto:info@24hourlime.com.au">info@24hourlime.com.au</a>
           </div>
+
+          <div class="col-xs-12 col-sm-3">
+            www: <a href="http://24hourlime.com.au">24hourlime.com.au</a>
+          </div>
+
+          <div class="col-xs-12 col-sm-3">
+            Let's work together
+          </div>
+          <div class="footer-overview">
+            <div class="col-xs-12 col-sm-3">
+              © 24HL 2015
+            </div>
+
         </div>
       </div>
     </footer>
@@ -76,7 +66,7 @@
       <script src="{{ theme:js }}"></script>
     	<script src="//localhost:8090/livereload.js"></script>
     {{ else }}
-      <script src="{{ theme:js src='min/kinder.min.js' }}"></script>
+      <script src="{{ theme:js src='min/24hl.min.js' }}"></script>
     {{ endif }}
   </body>
 </html>
