--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -6,22 +6,30 @@
 <ul class="flex-container">
   <li class="block-item">
 		<div class="verticalline"></div>
-			<div class="boldnumbers">01<br>WORK
+			<a href="/Work">
+			<div class="boldnumbers"><b>01</b>
+				<div class ="homenav">WORK</div></a>
 		</div>
 	</li>
 	<li class="block-item">
 		<div class="verticalline"></div>
-			<div class="boldnumbers">02<br>ABOUT
+		<a href="/About">
+			<div class="boldnumbers"><b>02</b>
+				<div class ="homenav">ABOUT</div></a>
 		</div>
 	</li>
 	<li class="block-item">
 		<div class="verticalline"></div>
-			<div class="boldnumbers">03<br>JOURNAL
+		<a href="/Journal">
+			<div class="boldnumbers"><b>03</b>
+				<div class ="homenav">JOURNAL</div></a>
 		</div>
 	</li>
 	<li class="block-item">
 		<div class="verticalline"></div>
-			<div class="boldnumbers">04<br>CONTACT
+		<a href="/Contact">
+			<div class="boldnumbers"><b>04</b>
+				<div class ="homenav">CONTACT</div></a>
 		</div>
 	</li>
 
@@ -29,7 +37,7 @@
 
 </div>
 
-		
+
 
 	</div>
 
@@ -120,6 +128,18 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 </ul>
 
 <div class="contact-background">
+	<nav class="block-navigation">
+		<ul class="nav nav-dark" role="navigation">
+			{{ nav from="/" }}
+				<li {{ if is_current || is_parent }} class="nav-active"{{ endif }}>
+					<a href="{{ url }}">
+						{{ title }}
+					</a>
+				</li>
+			{{ /nav }}
+		</ul>
+
+	</nav>
 	<ul class="flex-page-header">
 	<h2 class="column-page-header">LET'S WORK TOGETHER</h2>
 </ul>
