--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -34,7 +34,7 @@
   <script src="/_themes/24hl/js/particles.js"></script>
   <script src="/_themes/24hl/js/app.js"></script>
 
-  <div class="journal-layout">
+  <div class="journal-nav">
     <nav class="block-navigation">
   		<ul class="nav nav-dark" role="navigation">
   			{{ nav from="/" }}
