--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2604,10 +2604,10 @@ img {
   list-style: none;
 }
 .nav-main > li {
-  float: left;
+  display: inline;
 }
 .nav-main > li > a {
-  display: block;
+  display: inline-block;
   padding: 10px 50px 15px;
   color: #000;
 }
@@ -2629,7 +2629,7 @@ img {
   font-weight: 700;
 }
 .nav-dark {
-  margin: 0;
+  padding-top: 25px;
   list-style: none;
 }
 .nav-dark > li {
@@ -2909,10 +2909,15 @@ h5 {
   font-size: 12px;
   text-align: left;
 }
+.journal-nav {
+  padding: 25px 10px 10px 10px;
+  width: 50%;
+  margin: 0 auto;
+}
 .journal-layout {
-  padding: 60px 10px 10px 10px;
+  padding: 90px 10px 10px 10px;
   position: absolute;
-  top: 0px;
+  top: 90px;
   left: 0px;
 }
 .journal-container {
