--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -59,6 +59,7 @@ img {
     margin-left: auto;
     margin-right: auto;
 
+
     @media (max-width: @screen-xs-max) {
       float: none;
     }
@@ -77,10 +78,10 @@ img {
 
   > li {
 
-    float:left;
+    display: inline;
 
     > a {
-      display:block;
+      display:inline-block;
       padding:10px 50px 15px;
       color:#000;
 
@@ -114,7 +115,7 @@ img {
 }
 
 .nav-dark {
-  margin: 0;
+  padding-top: 25px;
 
 
   list-style:none;
@@ -497,10 +498,19 @@ h5 {
 
 }
 
+// need to fix this shit
+.journal-nav {
+  padding: 25px 10px 10px 10px;
+  width: 50%;
+  margin: 0 auto;
+
+
+}
+
 .journal-layout {
-  padding: 60px 10px 10px 10px;
+  padding: 90px 10px 10px 10px;
   position: absolute;
-  top: 0px;
+  top: 90px;
   left: 0px;
 
 
