--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -116,6 +116,8 @@ img {
 
 .nav-dark {
   padding-top: 25px;
+  width: 50%;
+  margin: 0 auto;
 
 
   list-style:none;
@@ -501,9 +503,8 @@ h5 {
 // need to fix this shit
 .journal-nav {
   padding: 25px 10px 10px 10px;
-  width: 50%;
-  margin: 0 auto;
-
+  width: 100%;
+  text-align: center;
 
 }
 
