--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -502,9 +502,11 @@ h5 {
 
 // need to fix this shit
 .journal-nav {
-  padding: 25px 10px 10px 10px;
+  padding: 25px 5px 5px 5px;
+  position: absolute;
+  top: 0px;
   width: 100%;
-  text-align: center;
+  margin: 0 auto;
 
 }
 
