--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -513,7 +513,7 @@ h5 {
 .journal-layout {
   padding: 90px 10px 10px 10px;
   position: absolute;
-  top: 90px;
+  top: 120px;
   left: 0px;
 
 
@@ -522,7 +522,11 @@ h5 {
 .journal-container {
   background-color: #000;
   padding: 10px 10px 10px 10px;
+  color: #fff;
+  a {
 
+    color: #fff;
+  }
 
 }
 
