--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -26,21 +26,19 @@
 </div>
 
 
-  <div class="journal-layout">
-    <h2 class="page-header">24HOUR JOURNAL</h2>
-  </div>
+
 
   <div class="journal-layout">
     <div class="col-md-offset-3 col-md-6">
       <div class="journal-container">
 
-        <h3>{{ title }}</h3>
+
         {{ content }}
 
         {{ entries:listing folder="blog" limit="5" }}
-        <h3><a href="{{ url }}">{{ title }}</a></h3>
-        <h4>{{ date }}</h4>
-        {{ content }}
+        <h4><a href="{{ url }}">{{ title }}</a></h4>
+        <h5>{{ date }}</h5>
+        {{ content }}<br><br>
         {{ /entries:listing }}
       </div>
     </div>
