--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -141,7 +141,7 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 
 	</nav>
 
-	<ul class="flex-page-header">
+	<ul class="flex-2-column">
 		<h2 class="column-page-header">LET'S WORK TOGETHER</h2>
 	</ul>
 	<ul class="flex-2-column">
@@ -155,7 +155,100 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 			</p>
 			</li>
 		<li class="column-item-dark">
-			<p><b>Raven form goes here</b></p>
+			<div class="article">
+
+				{{ if {raven:success} }}
+					<h1>Thanks!</h1>
+					{{ success_message }}
+				{{ else }}
+
+					<h1>{{ title }}</h1>
+					{{ content }}
+
+					{{ raven:errors }}
+
+						{{ if missing }}
+						<div class="error-block">
+							<h2>Missing fields:</h2>
+							<ul>
+								{{ missing }}
+									<li><strong>{{ field }}</strong></li>
+								{{ /missing }}
+							</ul>
+						</div>
+						{{ endif }}
+
+						{{ if invalid }}
+						<div class="error-block">
+							<h2>Invalid fields:</h2>
+							<ul>
+								{{ invalid }}
+									<li><strong>{{ field }}</strong>: {{ message }}</li>
+								{{ /invalid }}
+							</ul>
+						</div>
+						{{ endif }}
+
+					{{ /raven:errors }}
+
+					{{ raven:form formset="contact" attr="class:form-horizontal" }}
+					<div class="row col-sm-6">
+						<div class="form-group">
+							<label for="name" class="col-sm-6 control-label">First Name</label>
+							<div class="col-sm-6">
+								<input class="form-control" type="text" id="firstname" name="firstname" placeholder="First Name" value="" />
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="name" class="col-sm-6 control-label">Surname</label>
+							<div class="col-sm-6">
+								<input class="form-control" type="text" id="surname" name="surname" placeholder="Surname" value="" />
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label for="email" class="col-sm-6 control-label">Email</label>
+							<div class="col-sm-6">
+								<input class="form-control" type="email" id="email" name="email" placeholder="Email" value="" />
+							</div>
+						</div>
+
+					</div>
+					<div class="row col-sm-6">
+						<div class="form-group">
+							<label for="name" class="col-sm-6 control-label">Postcode</label>
+							<div class="col-sm-4">
+								<input class="form-control" type="text" id="postcode" name="postcode" placeholder="Postcode" value="" />
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="phone" class="col-sm-6 control-label">Phone number</label>
+							<div class="col-sm-6">
+								<input class="form-control" type="text" id="phone" name="phone" placeholder="Phone number" value="" />
+							</div>
+						</div>
+					</div>
+					<div class="row col-sm-6">
+						<div class="form-group">
+							<label for="message" class="col-sm-6 control-label">Message</label>
+							<div class="col-sm-6">
+								<textarea input class="form-control" type="text" id="phone" textarea name="message" rows="3" textarea placeholder="Message" value="" /></textarea>
+							</div>
+						</div>
+
+						<div class="form-group">
+								<div class="col-sm-offset-6 col-sm-6">
+									<button class="btn btn-md btn-primary" type="submit">Submit</button>
+								</div>
+						</div>
+					</div>
+
+					{{ /raven:form }}
+				{{ endif }}
+
+
+
+			</div>
 			</li>
 			<li class="column-item-dark">
 			<p>
