--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -418,7 +418,7 @@ h5 {
   display: flex;
 
   -webkit-flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
 
 
   p {
@@ -466,7 +466,7 @@ h5 {
   display: flex;
 
   -webkit-flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
 
 
   p {
@@ -550,6 +550,7 @@ h5 {
   display: flex;
   flex-flow: row nowrap;
 
+
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -572,6 +573,7 @@ h5 {
   margin-bottom: 20px;
   font-size:46px;
   letter-spacing: 0px;
+
 
   }
 
