--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -1,50 +1,64 @@
 <div class="home-hero">
 	<div class="container">
 		<h1 class="home-hero-punchline">24HOUR LIME. DIGITAL DESIGN.</h1>
-</div>
+	</div>
 <div class="block">
-<ul class="flex-container">
-  <li class="block-item">
-		<div class="verticalline"></div>
-			<a href="/Work">
+	<ul class="flex-container">
+		<li class="block-item">
+			<div class="verticalline">
+			</div>
+		<a href="/Work">
 			<div class="boldnumbers"><b>01</b>
-				<div class ="homenav">WORK</div></a>
-		</div>
-	</li>
-	<li class="block-item">
-		<div class="verticalline"></div>
+					<div class ="homenav">WORK</div></a>
+			</div>
+		</li>
+		<li class="block-item">
+			<div class="verticalline">
+			</div>
 		<a href="/About">
 			<div class="boldnumbers"><b>02</b>
 				<div class ="homenav">ABOUT</div></a>
-		</div>
-	</li>
-	<li class="block-item">
-		<div class="verticalline"></div>
+			</div>
+		</li>
+		<li class="block-item">
+			<div class="verticalline">
+			</div>
 		<a href="/Journal">
 			<div class="boldnumbers"><b>03</b>
 				<div class ="homenav">JOURNAL</div></a>
-		</div>
-	</li>
-	<li class="block-item">
-		<div class="verticalline"></div>
+			</div>
+		</li>
+		<li class="block-item">
+			<div class="verticalline">
+			</div>
 		<a href="/Contact">
 			<div class="boldnumbers"><b>04</b>
 				<div class ="homenav">CONTACT</div></a>
-		</div>
-	</li>
-
-</ul>
-
+			</div>
+		</li>
+	</ul>
+</div>
 </div>
 
 
-
-	</div>
-
-
-<ul class="flex-page-header">
+<ul class="flex-4-column">
 	<li class="column-page-header">
 		<h2 class="page-header">24HOUR LIME. DIGITAL DESIGN.</h2>
+	</li>
+	<li class="column-item">
+		<p>
+
+		</p>
+	</li>
+	<li class="column-item">
+		<p>
+
+		</p>
+	</li>
+	<li class="column-item">
+		<p>
+
+		</p>
 	</li>
 </ul>
 	<ul class="flex-4-column">
@@ -138,12 +152,31 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 				</li>
 			{{ /nav }}
 		</ul>
-
 	</nav>
 
-	<ul class="flex-2-column">
-		<h2 class="column-page-header">LET'S WORK TOGETHER</h2>
+	<ul class="flex-4-column">
+		<li class="column-item">
+			<h2 class="flex-page-header">LET'S WORK TOGETHER</h2>
+		</li>
+		<li class="column-item">
+			<p>
+
+			</p>
+		</li>
+		<li class="column-item">
+			<p>
+
+			</p>
+		</li>
+
+
+	<li class="column-item">
+		<p>
+
+		</p>
+	</li>
 	</ul>
+
 	<ul class="flex-2-column">
 
 	  <li class="column-item-dark">
