--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2951,6 +2951,15 @@ h5 {
   font-size: 12px;
   text-align: left;
 }
+.column-item-dark-form {
+  display: flex;
+  padding: 20px 0px 0px;
+  width: 350px;
+  line-height: 12px;
+  color: #ffffff;
+  font-weight: 100;
+  font-size: 12px;
+}
 .flex-page-header {
   padding: 0;
   margin-left: 40px;
