--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -545,6 +545,17 @@ h5 {
   text-align: left;
 
 }
+.column-item-dark-form {
+  display: flex;
+  padding:20px 0px 0px;
+  width: 350px;
+  line-height: 12px;
+  color: @white;
+  font-weight: 100;
+  font-size: 12px;
+  
+}
+
 
 .flex-page-header {
   padding: 0;
