--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -187,7 +187,7 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 			Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. Morbi mattis metus ut tempor interdum. Nunc diam mi, sodales imperdiet pellentesque ut, pretium vel justo. Aenean imperdiet lectus quam, in venenatis urna scelerisque vel. <br><br>Suspendisse ac massa at quam sagittis facilisis sit amet id turpis. Aenean luctus nisl sit amet lectus tempus gravida id ac tellus. Mauris dapibus magna enim, eget elementum arcu eleifend id. Proin ac nunc non dui hendrerit semper. Nam pharetra tortor vitae orci ullamcorper eleifend. Proin porttitor lectus quis urna tempor, et eleifend lacus ornare. Mauris non vulputate est.
 			</p>
 			</li>
-		<li class="column-item-dark">
+		<li class="column-item-dark-form">
 
 
 				{{ if {raven:success} }}
@@ -227,44 +227,36 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 					{{ raven:form formset="contact" attr="class:form-horizontal" }}
 
 						<div class="form-group">
-							<label for="name" class="col-sm-6 control-label">First Name</label>
-							<div class="col-sm-6">
+							<label for="name" class="col-sm-3 control-label">Name</label>
+							<div class="col-sm-9">
 								<input class="form-control" type="text" id="firstname" name="firstname" placeholder="First Name" value="" />
 							</div>
+						</div>
 
 						<div class="form-group">
-							<label for="name" class="col-sm-6 control-label">Surname</label>
-							<div class="col-sm-6">
+							<label for="name" class="col-sm-3 control-label">Company</label>
+							<div class="col-sm-9">
 								<input class="form-control" type="text" id="surname" name="surname" placeholder="Surname" value="" />
 							</div>
 						</div>
 
 						<div class="form-group">
-							<label for="email" class="col-sm-6 control-label">Email</label>
-							<div class="col-sm-6">
+							<label for="email" class="col-sm-3 control-label">Email</label>
+							<div class="col-sm-9">
 								<input class="form-control" type="email" id="email" name="email" placeholder="Email" value="" />
 							</div>
 						</div>
 
-					</div>
-
 						<div class="form-group">
-							<label for="name" class="col-sm-6 control-label">Postcode</label>
-							<div class="col-sm-4">
+							<label for="name" class="col-sm-3 control-label">Phone</label>
+							<div class="col-sm-9">
 								<input class="form-control" type="text" id="postcode" name="postcode" placeholder="Postcode" value="" />
 							</div>
-
-						<div class="form-group">
-							<label for="phone" class="col-sm-6 control-label">Phone number</label>
-							<div class="col-sm-6">
-								<input class="form-control" type="text" id="phone" name="phone" placeholder="Phone number" value="" />
-							</div>
 						</div>
-					</div>
 
 						<div class="form-group">
-							<label for="message" class="col-sm-6 control-label">Message</label>
-							<div class="col-sm-6">
+							<label for="message" class="col-sm-3 control-label">Message</label>
+							<div class="col-sm-9">
 								<textarea input class="form-control" type="text" id="phone" textarea name="message" rows="3" textarea placeholder="Message" value="" /></textarea>
 							</div>
 
