added "home" to top nav

--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -14,6 +14,7 @@
 <div class="journal-nav">
   <nav class="block-navigation">
     <ul class="nav nav-dark" role="navigation">
+      <li><a href="/">HOME</a>
       {{ nav from="/" }}
         <li {{ if is_current || is_parent }} class="nav-active"{{ endif }}>
           <a href="{{ url }}">
