--- a/_themes/24hl/layouts/work.html
+++ b/_themes/24hl/layouts/work.html
@@ -32,7 +32,9 @@
 
         <nav class="block-navigation">
           <ul class="nav nav-main" role="navigation">
+            <li><a href="/">HOME</a>
             {{ nav from="/" }}
+
               <li {{ if is_current || is_parent }} class="nav-active"{{ endif }}>
                 <a href="{{ url }}">
                   {{ title }}
