--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -15,7 +15,7 @@
 		<li class="block-item">
 			<div class="verticalline">
 			</div>
-		<a href="/About">
+		<a data-scroll href="#About">
 			<div class="boldnumbers"><b>02</b>
 				<div class ="homenav">ABOUT</div></a>
 			</div>
@@ -31,7 +31,7 @@
 		<li class="block-item">
 			<div class="verticalline">
 			</div>
-		<a href="/Contact">
+		<a data-scroll href="#Contact">
 			<div class="boldnumbers"><b>04</b>
 				<div class ="homenav">CONTACT</div></a>
 			</div>
@@ -41,9 +41,10 @@
 </div>
 
 
+
 <ul class="flex-4-column">
 	<li class="column-page-header">
-		<h2 class="page-header">24HOUR LIME. DIGITAL DESIGN.</h2>
+		<h2 id="About" class="page-header">24HOUR LIME. DIGITAL DESIGN.</h2>
 	</li>
 	<li class="column-item">
 		<p>
@@ -156,7 +157,7 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 
 	<ul class="flex-4-column">
 		<li class="column-item">
-			<h2 class="flex-page-header">LET'S WORK TOGETHER</h2>
+			<h2 id="Contact" class="flex-page-header">LET'S WORK TOGETHER</h2>
 		</li>
 		<li class="column-item">
 			<p>
