--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -354,6 +354,12 @@ h5 {
   margin-top: 20px;
 }
 
+.page-seperator-dark {
+  border-bottom: 1px solid;
+  color: #fff;
+  padding: 10px 30px;
+  margin-top: 20px;
+}
 
 .contact-details {
   color: #808285;
@@ -553,7 +559,7 @@ h5 {
   color: @white;
   font-weight: 100;
   font-size: 12px;
-  
+
 }
 
 
