--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -30,6 +30,29 @@
 
 
   <div class="journal-layout">
+    <ul class="flex-4-column">
+    	<li class="column-page-header">
+    		<h2 class="page-header">24HOUR LIME. DIGITAL DESIGN.</h2>
+    	</li>
+    	<li class="column-item">
+    		<p>
+
+    		</p>
+    	</li>
+    	<li class="column-item">
+    		<p>
+
+    		</p>
+    	</li>
+    	<li class="column-item">
+    		<p>
+
+    		</p>
+    	</li>
+    </ul>
+    <div class="page-seperator-dark">
+    </div>
+
     <div class="col-md-offset-3 col-md-6">
       <div class="journal-container">
 
