--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -32,7 +32,7 @@
   <div class="journal-layout">
     <ul class="flex-4-column">
     	<li class="column-page-header">
-    		<h2 class="page-header">24HOUR LIME. DIGITAL DESIGN.</h2>
+    		<h2 class="page-header">24HOUR JOURNAL</h2>
     	</li>
     	<li class="column-item">
     		<p>
