--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -359,6 +359,7 @@ h5 {
   color: #fff;
   padding: 10px 30px;
   margin-top: 20px;
+  margin-bottom: 20px;
   opacity: 0.3;
 }
 
@@ -531,7 +532,7 @@ h5 {
 }
 
 .journal-container {
-  background-color: #171616;
+
   padding: 10px 10px 10px 10px;
   color: #fff;
   a {
