--- a/_themes/24hl/templates/journal.html
+++ b/_themes/24hl/templates/journal.html
@@ -33,6 +33,7 @@
     <ul class="flex-4-column">
     	<li class="column-page-header">
     		<h2 class="page-header">24HOUR JOURNAL</h2>
+        <p class="column-item-dark"><b>Stuff and things, mostly daily, sometimes not.</b></p>
     	</li>
     	<li class="column-item">
     		<p>
